# Decoratorgpt

./: CMakeLists.txt  README.md  mod.json
6️⃣ .github/workflows/: build.yml
src/: main.cpp
